<resources>
    <string name="app_name">Jual Motor</string>
    <string name="welcome">Welcome,</string>
    <string name="sign_in_to_continue">Sign in to Continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">-OR-</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="username">Username</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explore">Explore</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="penjualan">Penjualan</string>
    <string name="penilaian">Penilaian</string>
    <string name="service">Service</string>
    <string name="sparepart">Sparepart</string>
    <string name="pelayanan">PELAYANAN</string>
    <string name="penjualan_terbaik">Penjualan Terbaik</string>
    <string name="see_all">See all</string>
    <string name="search">Search</string>
    <string name="camera">Camera</string>
    <string name="checkout">Checkout</string>
</resources>