<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppins_medium"
                            android:text="@string/welcome"
                            android:textColor="@color/black"
                            android:textSize="30sp"
                            tools:ignore="InefficientWeight" />

                        <TextView
                            android:id="@+id/see_all"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:fontFamily="@font/poppins"
                            android:onClick="sign_up"
                            android:text="@string/sign_up"
                            android:textAlignment="textEnd"
                            android:textColor="@color/green_500"
                            android:textSize="18sp"
                            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_light"
                        android:text="@string/sign_in_to_continue"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_light"
                            android:text="@string/email"
                            android:textSize="14sp" />

                        <EditText
                            android:id="@+id/email_tf_signin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:fontFamily="@font/poppins"
                            android:hint="@string/email"
                            android:importantForAutofill="no"
                            android:inputType="textPersonName|textEmailSubject"
                            android:labelFor="@id/textView3"
                            android:minHeight="48dp"
                            android:textSize="18sp"
                            tools:ignore="DuplicateSpeakableTextCheck" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_light"
                            android:text="@string/password"
                            android:textSize="14sp"
                            app:layout_constraintStart_toStartOf="@+id/password_tf_signin"
                            app:layout_constraintTop_toBottomOf="@+id/email_tf_signin" />

                        <EditText
                            android:id="@+id/password_tf_signin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints=""
                            android:ems="10"
                            android:fontFamily="@font/poppins"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:labelFor="@id/textView4"
                            android:textSize="18sp"
                            tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,TextContrastCheck,TouchTargetSizeCheck" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:clickable="true"
                        android:focusable="true"
                        android:fontFamily="@font/poppins_light"
                        android:text="@string/forgot_password"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        tools:ignore="TouchTargetSizeCheck" />

                    <Button
                        android:id="@+id/submit_bt_signin"
                        android:layout_width="match_parent"
                        android:layout_height="68dp"
                        android:layout_marginTop="36dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/sign_in"
                        tools:ignore="TextContrastCheck" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins"
                    android:text="@string/or"
                    android:textAlignment="center"
                    android:textColor="#757575"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/button3"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="30dp"
                    android:drawableLeft="@drawable/ic_icon_facebook"
                    android:fontFamily="@font/poppins"
                    android:paddingStart="40dp"
                    android:text="@string/sign_in_with_facebook"
                    android:ems="2"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    tools:ignore="RtlHardcoded,RtlSymmetry,TextContrastCheck" />

                <Button
                    android:id="@+id/button4"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:drawableLeft="@drawable/ic_icons8_google"
                    android:fontFamily="@font/poppins"
                    android:paddingStart="40dp"
                    android:ems="2"
                    android:text="@string/sign_in_with_google"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>