<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Explore">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                app:cardElevation="0dp"
                app:cardBackgroundColor="#F7F7F7"
                app:cardCornerRadius="120dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/imageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:background="@null"
                        android:contentDescription="@android:string/search_go"
                        android:labelFor="@+id/editTextTextPersonName"
                        android:src="@drawable/ic_baseline_search_24"
                        app:tint="@color/black"
                        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

                    <EditText
                        android:id="@+id/editTextTextPersonName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:ems="10"
                        android:layout_weight="1"
                        android:inputType="textPersonName"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        tools:ignore="RtlSymmetry,SpeakableTextPresentCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck"
                        android:autofillHints="Search" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:contentDescription="@string/camera"
                android:focusable="true"
                android:src="@drawable/ic_baseline_camera_alt_24"
                app:elevation="0dp"
                app:fabCustomSize="48dp"
                app:maxImageSize="30dp"
                tools:ignore="ImageContrastCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/pelayanan"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/penjualan_bt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:clickable="true"
                        android:contentDescription="@string/penjualan"
                        android:focusable="true"
                        android:src="@drawable/ic_motor"
                        app:backgroundTint="@color/white"
                        app:fabCustomSize="50dp"
                        app:maxImageSize="30dp"
                        app:tint="@color/black"
                        tools:ignore="DuplicateSpeakableTextCheck" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/penjualan"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/sparepart_bt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:clickable="true"
                        android:contentDescription="@string/sparepart"
                        android:focusable="true"
                        android:src="@drawable/ic_spare_part"
                        app:backgroundTint="@color/white"
                        app:fabCustomSize="50dp"
                        app:maxImageSize="30dp"
                        app:tint="@color/black"
                        tools:ignore="DuplicateSpeakableTextCheck" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sparepart"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/service_bt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:clickable="true"
                        android:contentDescription="@string/service"
                        android:focusable="true"
                        android:src="@drawable/ic_service"
                        app:backgroundTint="@color/white"
                        app:fabCustomSize="50dp"
                        app:maxImageSize="30dp"
                        app:tint="@color/black"
                        tools:ignore="DuplicateSpeakableTextCheck" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/service"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/penilaian_bt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:clickable="true"
                        android:contentDescription="@string/penilaian"
                        android:focusable="true"
                        android:src="@drawable/ic_star"
                        app:backgroundTint="@color/white"
                        app:fabCustomSize="50dp"
                        app:maxImageSize="30dp"
                        app:tint="@color/black"
                        tools:ignore="DuplicateSpeakableTextCheck" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/penilaian"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/penjualan_terbaik"
                android:textColor="@color/black"
                android:textSize="24sp"
                tools:ignore="InefficientWeight" />

            <TextView
                android:id="@+id/see_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/poppins"
                android:text="@string/see_all"
                android:textAlignment="textEnd"
                android:textColor="@color/green_500"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/explore_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>

    </LinearLayout>

</FrameLayout>